--- a/Smtpapi/HeaderTests/HeaderTests.csproj
+++ b/Smtpapi/HeaderTests/HeaderTests.csproj
@@ -40,12 +40,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\Xsmtpapi\Xsmtpapi.csproj">
-      <Project>{314665CE-FB24-4984-9B0D-2C39218930F1}</Project>
-      <Name>Xsmtpapi</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Smtpapi\Smtpapi.csproj">
+      <Project>{314665CE-FB24-4984-9B0D-2C39218930F1}</Project>
+      <Name>Smtpapi</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
