--- a/Smtpapi/packages/repositories.config
+++ b/Smtpapi/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="../HeaderTests/packages.config" />
   <repository path="..\HeaderTests\packages.config" />
 </repositories>
