--- a/Smtpapi/Smtpapi/Smtpapi.csproj
+++ b/Smtpapi/Smtpapi/Smtpapi.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Xsmtpapi</RootNamespace>
-    <AssemblyName>Xsmtpapi</AssemblyName>
+    <AssemblyName>Smtpapi</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProductVersion>12.0.0</ProductVersion>
