--- a/Smtpapi/packages/repositories.config
+++ b/Smtpapi/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="../HeaderTests/packages.config" />
   <repository path="..\HeaderTests\packages.config" />
+  <repository path="..\Smtpapi\packages.config" />
 </repositories>
