--- a/Smtpapi/Smtpapi/SendGrid.SmtpApi.csproj
+++ b/Smtpapi/Smtpapi/SendGrid.SmtpApi.csproj
@@ -49,6 +49,7 @@
     <Compile Include="HeaderSettingsNode.cs" />
     <Compile Include="IHeader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
