--- a/Smtpapi/Smtpapi/SendGrid.SmtpApi.csproj
+++ b/Smtpapi/Smtpapi/SendGrid.SmtpApi.csproj
@@ -1,6 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
+    <VersionPrefix>1.3.3</VersionPrefix>
+    <AssemblyName>SendGrid.SmtpApi</AssemblyName>
+    <Authors>Brandon West;Elmer Thomas;Twilio DX Team</Authors>
+    <Company>Twilio SendGrid</Company>
+    <Product>Twilio SendGrid</Product>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://sendgrid.com/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/sendgrid/smtpapi-csharp.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageIconUrl>https://sendgrid.com/wp-content/themes/sgdotcom/pages/resource/brand//2016/SendGrid-Logomark.png</PackageIconUrl>
+    <PackageDescription>Easily build SendGrid SMTPAPI headers.</PackageDescription>
+    <PackageReleaseNotes>Please see: https://github.com/sendgrid/smtpapi-csharp/releases</PackageReleaseNotes>
+    <PackageTags>Twilio;SendGrid;Email;Mail;Microsoft;Azure;Transactional;.NET Core</PackageTags>
+    <Copyright>Twilio SendGrid, Inc. 2020</Copyright>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
@@ -35,6 +51,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Release\SendGrid.SmtpApi.xml</DocumentationFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly Condition="Exists('$(AssemblyOriginatorKeyFile)')">true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>../smptpapicsharp.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
