--- a/Smtpapi/Smtpapi/SendGrid.SmtpApi.csproj
+++ b/Smtpapi/Smtpapi/SendGrid.SmtpApi.csproj
@@ -1,20 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <VersionPrefix>1.3.3</VersionPrefix>
-    <AssemblyName>SendGrid.SmtpApi</AssemblyName>
-    <Authors>Brandon West;Elmer Thomas;Twilio DX Team</Authors>
-    <Company>Twilio SendGrid</Company>
-    <Product>Twilio SendGrid</Product>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://sendgrid.com/</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/sendgrid/smtpapi-csharp.git</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageIconUrl>https://sendgrid.com/wp-content/themes/sgdotcom/pages/resource/brand//2016/SendGrid-Logomark.png</PackageIconUrl>
-    <PackageDescription>Easily build SendGrid SMTPAPI headers.</PackageDescription>
-    <PackageReleaseNotes>Please see: https://github.com/sendgrid/smtpapi-csharp/releases</PackageReleaseNotes>
-    <PackageTags>Twilio;SendGrid;Email;Mail;Microsoft;Azure;Transactional;.NET Core</PackageTags>
-    <Copyright>Twilio SendGrid, Inc. 2020</Copyright>
+    <Authors>Twilio</Authors>
+    <Description>Easily build SendGrid SMTPAPI headers.</Description>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -100,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="SmtpApiSendGrid.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
