--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,4 @@ notifications:
     on_pull_requests: false
     on_success: never
     on_failure: change
-    rooms:
-      - secure: OMxOft/oHZcNVog6KItt3/+y8lux+PMUPaAUBRlDV6csQ6QcUvMtpml8PBh+Z/0wzkIBayZG4XCKlSXnOf1yVvlNE+NWNGmG8ClRYjS2qTJcH1VnWwIxWB/TUKnXxOQar5db04RwH6qtAOv72JfI7c5LI/KlI8MEK0cy1JsI4Yc=
+    rooms: $SLACK_TOKEN
