chore: fix travis deploy command

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ after_success:
 deploy:
   skip_cleanup: true
   provider: script
-  script: dotnet nuget push /home/travis/build/sendgrid/smtpapi-csharp/*.nupkg -ApiKey
+  script: dotnet nuget push /home/travis/build/sendgrid/smtpapi-csharp/*.nupkg --api-key
     $NUGET_API_KEY -Source https://api.nuget.org/v3/index.json
   on:
     branch: main
