--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -42,6 +42,13 @@ jobs:
         with:
           dotnet-version: '3.1.x'
 
+      - name: Create GitHub Release
+        uses: sendgrid/dx-automator/actions/release@main
+        with:
+          footer: '**[NuGet](https://www.nuget.org/packages/SendGrid.SmtpApi/${version})**'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Publish package to NuGet
         run: |
           make install release
